<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">
    <!-- Detail Activity -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:background="@color/colorPrimaryBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryBlack">

            <ImageView
                android:id="@+id/poster_iv"
                android:layout_width="227dp"
                android:layout_height="299dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="32dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image_description"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/no_image_available" />

            <TextView
                android:id="@+id/vote_tv"
                android:layout_width="125dp"
                android:layout_height="67dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:width="120dp"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/vote_place_holder"
                android:textColor="@android:color/white"
                android:textSize="48sp"
                app:layout_constraintStart_toEndOf="@+id/poster_iv"
                app:layout_constraintTop_toBottomOf="@+id/vote_label_tv" />

            <TextView
                android:id="@+id/release_date_label_tv"
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="100dp"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/release_date_label"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/poster_iv"
                app:layout_constraintTop_toBottomOf="@+id/vote_tv" />

            <TextView
                android:id="@+id/vote_label_tv"
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="52dp"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/vote_label"
                android:textColor="@android:color/white"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/poster_iv"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/overview_label_tv"
                android:layout_width="127dp"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="serif"
                android:text="@string/overview_label"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/poster_iv" />

            <TextView
                android:id="@+id/overview_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:width="350dp"
                android:fontFamily="casual"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/overview_label_tv" />

            <TextView
                android:id="@+id/date_tv"
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:width="350dp"
                android:fontFamily="casual"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/poster_iv"
                app:layout_constraintTop_toBottomOf="@+id/release_date_label_tv" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>